--- a/templates/profile_page/register.html
+++ b/templates/profile_page/register.html
@@ -14,7 +14,7 @@
   <form action="{% url "profile:register" %}" method="POST">
     {% csrf_token %}
     <h1>Register</h1>
-    {{ form }}
+    {{ form.as_p }}
     {% comment %} <label for="name">Username:</label>
     <input type="text" id="name" name="name" placeholder="Enter the username" required>
 
@@ -26,6 +26,7 @@
     <p>Already signed up?</p>
     <a href="{% url "profile:login" %}">Sign in</a>
     <a href="{% url "main_page" %}">Home</a>
+    <a href="{% url "profile:profile" %}">Profile</a>
   </form>
 
   {% if messages %}
