--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,9 @@
     <link href="{% static "assets/vendor/glightbox/css/glightbox.min.css" %}" rel="stylesheet">
     <link href="{% static "assets/vendor/swiper/swiper-bundle.min.css" %}" rel="stylesheet">
     <link href="{% static "assets/css/main.css" %}" rel="stylesheet">
+
+    <!-- Bootstrap -->
+    {% comment %} <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> {% endcomment %}
   {% endblock style %}
 
 </head>
