--- a/templates/profile_page/login.html
+++ b/templates/profile_page/login.html
@@ -14,11 +14,12 @@
     <form action="{% url "profile:login" %}" method="POST">
       {% csrf_token %}
       <h1>Login</h1>
-      {{ form }}
+      {{ form.as_p }}
       <input type="submit" value="Login">
       <p>Haven't signed up yet?</p>
       <a href="{% url "profile:register" %}">Sign up</a>
       <a href="{% url "main_page" %}">Home</a>
+      <a href="{% url "profile:profile" %}">Profile</a>
     </form>
     {% if messages %}
     <ul class="messages">
