Create new app feed, add an ability to create posts

--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -47,7 +47,7 @@
       <ul>
         <li><a href="{% url "profile:profile" %}"><i class="bi bi-person navicon active"></i> Profile settings</a></li>
         <li><a href="{% url "main_page" %}"><i class="bi bi-house navicon"></i>Home</a></li>
-        <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
+        <li><a href="{% url "feed:feed" %}"><i class="bi bi-file-earmark-text navicon"></i> Feed</a></li>
         <li><a href="#portfolio"><i class="bi bi-images navicon"></i> Portfolio</a></li>
         <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i> Services</a></li>
         <li class="dropdown"><a href="#"><i class="bi bi-menu-button navicon"></i> <span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
@@ -254,7 +254,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Resume</h2>
+        <h2>Menu</h2>
         <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
       </div><!-- End Section Title -->
 
